Fix wrapping for first message; permissions work

--- a/Valour/Client/wwwroot/css/app.css
+++ b/Valour/Client/wwwroot/css/app.css
@@ -141,12 +141,12 @@ body {
 }
 
 .message .author-pfp {
-    width: 36px;
-    height: 36px;
+    width: 38px;
+    height: 38px;
     border-radius: 50%;
-    margin-top: 6px;
-    margin-left: 6px;
-    margin-right: 6px;
+    margin-top: 8px;
+    margin-left: 4px;
+    margin-right: 4px;
 }
 
 .message .author-name {
@@ -174,6 +174,7 @@ body {
     margin-left: 3px;
     margin-top: 4px;
     vertical-align: top;
+    padding-left: 52px;
 }
 
 .multi-message .message-content {
@@ -257,8 +258,8 @@ body {
 .message:hover .author-pfp {
     width: 30px;
     height: 30px;
-    margin-left: 9px;
-    margin-right: 9px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 .multi-message:hover .time {
